[gd_scene load_steps=17 format=3 uid="uid://cy5de7c0713cw"]

[ext_resource type="Script" path="res://scripts/Bomby.gd" id="1_fnt5c"]
[ext_resource type="AudioStream" uid="uid://dnnfgqv01ld8w" path="res://Media/sfx/explosion16.wav" id="2_yy77h"]
[ext_resource type="AudioStream" uid="uid://buqe4ddxwekc2" path="res://Media/sfx/charge01.wav" id="3_luyl2"]
[ext_resource type="AudioStream" uid="uid://bbbtc3u6cbaqg" path="res://Media/sfx/bigJump.wav" id="4_t48kb"]
[ext_resource type="Texture2D" uid="uid://vr6gm1cq4vvw" path="res://Media/sprites/bomby.png" id="4_uehsa"]

[sub_resource type="RectangleShape2D" id="RectangleShape2D_ys26t"]
size = Vector2(174, 160)

[sub_resource type="Animation" id="Animation_jfkii"]
length = 0.001
tracks/0/type = "value"
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/path = NodePath("Sprite2D:position")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/keys = {
"times": PackedFloat32Array(0),
"transitions": PackedFloat32Array(1),
"update": 0,
"values": [Vector2(10, -49)]
}
tracks/1/type = "value"
tracks/1/imported = false
tracks/1/enabled = true
tracks/1/path = NodePath("Sprite2D:modulate")
tracks/1/interp = 1
tracks/1/loop_wrap = true
tracks/1/keys = {
"times": PackedFloat32Array(0),
"transitions": PackedFloat32Array(1),
"update": 0,
"values": [Color(1, 1, 1, 1)]
}
tracks/2/type = "value"
tracks/2/imported = false
tracks/2/enabled = true
tracks/2/path = NodePath("Sprite2D:self_modulate")
tracks/2/interp = 1
tracks/2/loop_wrap = true
tracks/2/keys = {
"times": PackedFloat32Array(0),
"transitions": PackedFloat32Array(1),
"update": 0,
"values": [Color(1, 1, 1, 1)]
}

[sub_resource type="Animation" id="Animation_0641d"]
resource_name = "hurt"
length = 0.50001
tracks/0/type = "value"
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/path = NodePath("Sprite2D:modulate")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/keys = {
"times": PackedFloat32Array(0, 0.5),
"transitions": PackedFloat32Array(1, 1),
"update": 0,
"values": [Color(0.972549, 0.407843, 0.407843, 1), Color(1, 1, 1, 1)]
}
tracks/1/type = "audio"
tracks/1/imported = false
tracks/1/enabled = true
tracks/1/path = NodePath("AnimationPlayer/AudioStreamPlayer")
tracks/1/interp = 1
tracks/1/loop_wrap = true
tracks/1/keys = {
"clips": [{
"end_offset": 0.0,
"start_offset": 0.0,
"stream": ExtResource("2_yy77h")
}],
"times": PackedFloat32Array(0)
}
tracks/1/use_blend = true

[sub_resource type="Animation" id="Animation_q5iy4"]
resource_name = "idle"
length = 0.001
tracks/0/type = "value"
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/path = NodePath("Sprite2D:modulate")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/keys = {
"times": PackedFloat32Array(0),
"transitions": PackedFloat32Array(1),
"update": 0,
"values": [Color(1, 1, 1, 1)]
}

[sub_resource type="Animation" id="Animation_xwss6"]
resource_name = "speed"
length = 2.0
loop_mode = 1
tracks/0/type = "value"
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/path = NodePath("Sprite2D:modulate")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/keys = {
"times": PackedFloat32Array(0),
"transitions": PackedFloat32Array(1),
"update": 0,
"values": [Color(3, 3, 3, 1)]
}
tracks/1/type = "audio"
tracks/1/imported = false
tracks/1/enabled = true
tracks/1/path = NodePath("AnimationPlayer/MasterBus")
tracks/1/interp = 1
tracks/1/loop_wrap = true
tracks/1/keys = {
"clips": [{
"end_offset": 0.0,
"start_offset": 0.0,
"stream": ExtResource("3_luyl2")
}],
"times": PackedFloat32Array(0)
}
tracks/1/use_blend = true
tracks/2/type = "value"
tracks/2/imported = false
tracks/2/enabled = true
tracks/2/path = NodePath("Sprite2D:self_modulate")
tracks/2/interp = 1
tracks/2/loop_wrap = true
tracks/2/keys = {
"times": PackedFloat32Array(0, 0.2, 0.4, 0.6, 0.8, 1, 1.2, 1.4, 1.6, 1.8, 2, 2.2),
"transitions": PackedFloat32Array(1, 1, 1, 1, 1, 1, 1, 1, 1, 1, 1, 1),
"update": 0,
"values": [Color(0.427451, 0.415686, 0.415686, 1), Color(1, 0.294118, 0.294118, 1), Color(0.427451, 0.415686, 0.415686, 1), Color(1, 0.294118, 0.294118, 1), Color(0.427451, 0.415686, 0.415686, 1), Color(1, 0.294118, 0.294118, 1), Color(0.427451, 0.415686, 0.415686, 1), Color(1, 0.294118, 0.294118, 1), Color(0.427451, 0.415686, 0.415686, 1), Color(1, 0.294118, 0.294118, 1), Color(0.427451, 0.415686, 0.415686, 1), Color(1, 0.294118, 0.294118, 1)]
}

[sub_resource type="AnimationLibrary" id="AnimationLibrary_yhx8y"]
_data = {
"RESET": SubResource("Animation_jfkii"),
"hurt": SubResource("Animation_0641d"),
"idle": SubResource("Animation_q5iy4"),
"speed": SubResource("Animation_xwss6")
}

[sub_resource type="Animation" id="Animation_obreh"]
length = 0.001
tracks/0/type = "value"
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/path = NodePath("../CollisionShape2D:shape")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/keys = {
"times": PackedFloat32Array(0),
"transitions": PackedFloat32Array(1),
"update": 1,
"values": [SubResource("RectangleShape2D_ys26t")]
}

[sub_resource type="CircleShape2D" id="CircleShape2D_fepvr"]
radius = 93.0054

[sub_resource type="Animation" id="Animation_j78p7"]
resource_name = "circle_shape"
length = 0.36
tracks/0/type = "value"
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/path = NodePath("../CollisionShape2D:shape")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/keys = {
"times": PackedFloat32Array(0),
"transitions": PackedFloat32Array(1),
"update": 1,
"values": [SubResource("CircleShape2D_fepvr")]
}
tracks/1/type = "audio"
tracks/1/imported = false
tracks/1/enabled = true
tracks/1/path = NodePath("../ShapePlayer/AudioStreamPlayer")
tracks/1/interp = 1
tracks/1/loop_wrap = true
tracks/1/keys = {
"clips": [{
"end_offset": 0.0,
"start_offset": 0.0,
"stream": ExtResource("4_t48kb")
}],
"times": PackedFloat32Array(0)
}
tracks/1/use_blend = true

[sub_resource type="Animation" id="Animation_ovkct"]
resource_name = "square_shape"
length = 0.001
tracks/0/type = "value"
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/path = NodePath("../CollisionShape2D:shape")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/keys = {
"times": PackedFloat32Array(0),
"transitions": PackedFloat32Array(1),
"update": 1,
"values": [SubResource("RectangleShape2D_ys26t")]
}

[sub_resource type="AnimationLibrary" id="AnimationLibrary_vfoif"]
_data = {
"RESET": SubResource("Animation_obreh"),
"circle_shape": SubResource("Animation_j78p7"),
"square_shape": SubResource("Animation_ovkct")
}

[node name="Bomby" type="RigidBody2D" groups=["bomby", "enemy"]]
collision_layer = 4
collision_mask = 3
gravity_scale = 2.0
max_contacts_reported = 1
contact_monitor = true
script = ExtResource("1_fnt5c")

[node name="VisibleOnScreenNotifier2D" type="VisibleOnScreenNotifier2D" parent="."]
position = Vector2(3.8147e-06, -3.50001)
scale = Vector2(9.6, 8.65)

[node name="CollisionShape2D" type="CollisionShape2D" parent="."]
position = Vector2(-1, -1)
shape = SubResource("RectangleShape2D_ys26t")

[node name="AnimationPlayer" type="AnimationPlayer" parent="."]
libraries = {
"": SubResource("AnimationLibrary_yhx8y")
}

[node name="AudioStreamPlayer" type="AudioStreamPlayer" parent="AnimationPlayer"]
bus = &"smolBus"

[node name="MasterBus" type="AudioStreamPlayer" parent="AnimationPlayer"]

[node name="ShapePlayer" type="AnimationPlayer" parent="."]
root_node = NodePath("../AnimationPlayer")
libraries = {
"": SubResource("AnimationLibrary_vfoif")
}

[node name="AudioStreamPlayer" type="AudioStreamPlayer" parent="ShapePlayer"]

[node name="Sprite2D" type="Sprite2D" parent="."]
position = Vector2(10, -49)
texture = ExtResource("4_uehsa")

[connection signal="body_entered" from="." to="." method="_on_body_entered"]
[connection signal="screen_exited" from="VisibleOnScreenNotifier2D" to="." method="_on_visible_on_screen_notifier_2d_screen_exited"]
